# AIvilization

./: .dockerignore  .gitignore  Dockerfile  README.md  env.py  future.py  main.py  poetry.toml  pyproject.toml
aivilization/: main.py
core/civilization/: __init__.py
core/civilization/god/: system.py
core/civilization/person/: __init__.py  base.py  default.py
core/civilization/person/action/: __init__.py  base.py
core/civilization/person/brain/: __init__.py  base.py  default.py
core/civilization/person/brain/llm/: __init__.py  base.py  openai.py
core/civilization/person/brain/memory/: __init__.py  base.py  long_term.py  openai.py  short_term.py
core/civilization/person/brain/memory/vector/: openai.py
core/civilization/person/brain/organize/: base.py  execute.py  optimize.py  plan.py  review.py
core/civilization/person/brain/vector/: __init__.py  base.py  openai.py
core/civilization/person/ear/: __init__.py  base.py  default.py
core/civilization/person/mouth/: __init__.py  base.py  default.py
core/civilization/person/organize/: __init__.py  base.py  template.py
core/civilization/person/tool/: __init__.py  base.py  browser.ipynb  browser.py  coded.py  default.py
core/civilization/person/tracer/: __init__.py  base.py  log.py  redis.py  wrapper.py
core/config/: __init__.py  env.py
core/logging/: __init__.py  ansi.py  logger.py
core/logging/handlers/: stream.py
core/terminal/tracer/: __init__.py  stdout.py
templates/: base.html
