[tool.poetry]
name = "AIvilization"
version = "0.1.0"
description = "Artificial Civilization"
authors = ["Taeho Lee <taeho@corca.ai>", "Chung Hwan Han <hanch@corca.ai>"]
readme = "README.md"

[tool.poetry.scripts]
start = "aivilization.main:main"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
python-dotenv = "^1.0.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
